editing user roles and permissions

--- a/EventBookingSystem.WebApi/appsettings.json
+++ b/EventBookingSystem.WebApi/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "http://localhost:5024"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=EventBookingSystem;Username=postgres;Password=Ps11"
+    "DefaultConnection": "User ID = postgres;Password=Ps11;Host=localhost;Port=5432;Database=EventBookingSystem;Pooling=true;"
   }
 }
